ajout de la récupération des mails des contributeurs.